update benchmark scripts