@@ -7,6 +7,7 @@ java \
   -XX:+UnlockDiagnosticVMOptions \
   -XX:+DebugNonSafepoints \
   -XX:+FlightRecorder \
+  -XX:-UseBiasedLocking \
   -cp fix-gateway-system-tests-*-benchmarks.jar \
   -XX:StartFlightRecording=delay=10s,duration=40s,name=MyRecording,filename=dump.jfr,settings=./ProfileWithoutSockets.jfc \
   -Dfix.core.timing=true \
@@ -15,7 +16,5 @@ java \
   -Dfix.core.receiver_buffer_size=1048576 \
   -Dfix.core.sender_socket_buffer_size=16777216 \
   -Dfix.core.receiver_socket_buffer_size=16777216 \
-  -Dfix.benchmark.warmup=100000 \
-  -Dfix.benchmark.messages=500000 \
   uk.co.real_logic.fix_gateway.system_benchmarks.FixBenchmarkServer
 
